zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__move_cursor_below_scroll_region.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): 7foo
01 (C): 8foo
02 (C): 9foo
03 (C): 10foo
04 (C): 11foo
05 (C): 12foo
06 (C): 13foo
07 (C): 14foo
08 (C): 15foo
09 (C): 16foo
10 (C): 17foo
11 (C): 18foo
12 (C): 19foo
13 (C): 20foo
14 (C): 21foo
15 (C): 22foo
16 (C): 23foo
17 (C): 24foo
18 (C): 25foo
19 (C): 26foo
20 (C): 27foo
21 (C): 28foo
22 (C): 29foo
23 (C): 30foo                                                                                                             
24 (C): 31foo                                                                                                             
25 (C): 32foo                                                                                                             
26 (C): 33foo                                                                                                             
27 (C): 34foo                                                                                                             
28 (C): 35foo                                                                                                             
29 (C):                                                                                                                   
30 (C):                                                                                                                   
31 (C):                                                                                                                   
32 (C):                                                                                                                   
33 (C): 5zzr                                                                                                              
34 (C): 

