zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__neovim_insert_mode.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
expression: "format!(\"{:?}\", grid)"

---
00 (C): line 1                                                                                                              
01 (C): line 2                                                                                                              
02 (C): line 3                                                                                                              
03 (C): line 4                                                                                                              
04 (C): line 5                                                                                                              
05 (C): line 6                                                                                                              
06 (C): line 7                                                                                                              
07 (C): line 8                                                                                                              
08 (C): line 9                                                                                                              
09 (C): line 10                                                                                                             
10 (C): line 11                                                                                                             
11 (C): line 12                                                                                                             
12 (C): line 13                                                                                                             
13 (C): line 14                                                                                                             
14 (C): line 15                                                                                                             
15 (C): line 16                                                                                                             
16 (C): line 17                                                                                                             
17 (C): line 18                                                                                                             
18 (C): line 19                                                                                                             
19 (C): line 20                                                                                                             
20 (C): line 21                                                                                                             
21 (C): line 22                                                                                                             
22 (C): line 23                                                                                                             
23 (C): line 24                                                                                                             
24 (C): line 25                                                                                                             
25 (C): line 26                                                                                                             
26 (C): some-file                                                                                         10,1           Top
27 (C): -- INSERT --                                                                                                        

