zellij-server/src/panes/unit/snapshots/zellij_server__panes__grid__grid_tests__nested_list_ui_component.snap
---
source: zellij-server/src/panes/./unit/grid_tests.rs
assertion_line: 3189
expression: "format!(\"{:?}\", grid)"
---
00 (C):  > item 1                                                           
01 (C):  > item 2                                                           
02 (C):    - item 3                                                         
03 (C):  > item 4                                                           
04 (C):    - item 5 lsdkfjlskdj flksdjf lksdj flksjd f                                                         
05 (C):      > item 6 sldkfjslkdfj lsdkjf lskdjf lskdjf lksdjf lskdjf                                                        
06 (C):  > item 7                                                           
07 (C): 
08 (C): 
09 (C): 
10 (C): 
11 (C): 
12 (C): 
13 (C): 
14 (C): 
15 (C): 
16 (C): 
17 (C): 
18 (C): 
19 (C): 
20 (C): 
21 (C): 
22 (C): 
23 (C): 
24 (C): 
25 (C): 
26 (C): 
27 (C): 
28 (C): 
29 (C): 
30 (C): 
31 (C): 
32 (C): 
33 (C): 
34 (C): 
35 (C): 
36 (C): 
37 (C): 
38 (C): 
39 (C): 
40 (C): 

